# cue

./: .gitignore  LICENSE  README.md  pyproject.toml
cue/: README.md  pyproject.toml  readme.md
cue/astro_cue.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cue/src/astro_cue.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cue/src/cue/: Untitled.ipynb  __init__.py  cont_pca.py  continuum.py  emulator.py  line.py  line_pca.py  nn.py  utils.py
cue/src/cue/data/: cont_pca_50comp_wavcut.pkl  lineList_wav.npy  pca_cont_new.pkl  pca_line_new_C2C3.pkl  pca_line_new_H1.pkl  pca_line_new_He2.pkl  pca_line_new_O1.pkl  pca_line_new_O2.pkl  pca_line_new_ionE_1.pkl  speculator_cont_50comp_wavcut.pkl  speculator_cont_new.pkl  speculator_line_2m_ele_2.pkl  speculator_line_2m_ele_3.pkl  (+9 more)
demo/: Untitled.ipynb  cue_demo.ipynb  cue_for_rubix.ipynb  cuejax_demo.ipynb  demo_data.pkl
src/cue/: __init__.py  cont_pca.py  continuum.py  emulator.py  line.py  line_pca.py  nn.py  pca.py  utils.py
src/cue/data/: pca_line_new_Ar4.pkl  pca_line_new_C1.pkl  pca_line_new_C4.pkl  pca_line_new_He1.pkl  pca_line_new_Ne4.pkl  pca_line_new_O3.pkl  pca_line_new_S4.pkl  pca_line_new_ionE_2.pkl  speculator_line_new_C1.pkl  speculator_line_new_C4.pkl  speculator_line_new_O2.pkl  speculator_line_new_ionE_1.pkl  speculator_line_new_ionE_2.pkl
src/cuejax/: __init__.py  constants.py  emulator.py  sources.py  utils.py
src/cuejax/data/: fspse_cue_cont_ann.pkl  fspse_cue_cont_norm.pkl  fspse_cue_cont_pca_basis.pkl  fspse_cue_eline_norm.pkl  fspse_cue_eline_pca_bases.pkl  nn_stats_v0.pkl
(+8 files in other folders)
